# ocs2

./: status_updates.md
ocs2_core/src/reference/: TargetTrajectories.cpp
ocs2_optimal_control_project/: CMakeLists.txt  package.xml
ocs2_optimal_control_project/src/: main.cpp
